# ldls-project

./: README.md  download_dataset.py  pyproject.toml  requirements.txt  setup.txt  submit_job.slurm  train_tinyllama.sh
configs/deepspeed/: zero2.json  zero3.json
configs/models/: smollm_1.7b.yaml  smollm_135m.yaml  smollm_360m.yaml
configs/training/: cpt.yaml  sft.yaml
data/raw/sample_cpt/: sample.jsonl
data/raw/sample_sft/: sample.jsonl
scripts/: README.md  batch_generate.py  download_data.py  evaluate.py  prepare_data.py  serve.py  setup_all.py  train.py
slurm/: README.md  eval.slurm  train_multi.slurm  train_single.slurm
src/llm_trainer/: config.py  dataset.py  distributed.py  evaluator.py  inference.py  model.py  monitor.py  trainer.py  utils.py
tests/: test_dataset.py  test_distributed.py  test_evaluator.py  test_inference.py  test_model.py  test_trainer.py  test_utils.py
